feat: Remove internal secret mode
